Infineon X-GOLD RIL for M8, fork from git://dev.omapzoom.org/pub/scm/modem-int/xgold-ril.git

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Infineon X-GOLD RIL
+Infineon X-GOLD RIL for M8, fork from git://dev.omapzoom.org/pub/scm/modem-int/xgold-ril.git
 ---------------------
 
 This RIL intend to address all the Infineon X-Gold family.
